# RDO-automator

./: .gitignore  Makefile  README.md  build_exe.py  config.toml  main.py  non_existent.toml  pyproject.toml  skills-lock.json
.github/workflows/: build.yml  deploy-backend.yml  deploy-frontend.yml  integrity-ci.yml
backend/: .env.example  Dockerfile  excel.py  exceptions.py  logger.py  main.py  processor.py  pyproject.toml  pyrightconfig.json  schemas.py
backend/excel/: __init__.py  report.py  source.py  template.py
backend/models/: api_models.py
backend/routers/: generate.py  preview.py
backend/services/: preview_service.py  report_builder.py  web_report_service.py
backend/src/: config.py  exceptions.py  logger.py  main.py  routes.py  schemas.py
backend/src/excel/: __init__.py  processor.py  report.py  source.py  template.py
backend/tests/: conftest.py
backend/tests/unit/: test_excel_loader.py  test_preview_service.py  test_processor.py
backend/utils/: excel_loader.py  logger.py  processor.py  template_manager.py  validator.py
docs/: FEATURES.md  REQUIREMENTS.md  TEMPLATE_LOGIC.md  UI_UX_SPEC.md
docs/adr/: 001-pyqt6-desktop-app.md  002-fastapi-react-web-app.md
docs/superpowers/plans/: 2026-05-28-web-migration.md  2026-05-30-vercel-composition-refactor-plan.md  2026-06-02-template-preview-styling.md
docs/superpowers/specs/: 2026-05-28-web-migration-design.md  2026-05-30-vercel-composition-refactor-design.md  2026-06-02-template-preview-styling-design.md
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css  lucide.d.ts  types.ts
frontend/src/components/: AccordionSection.tsx  ContractFields.tsx  DataPreview.tsx  FileUpload.tsx  GenerateFooter.tsx  Header.tsx  MappingSection.tsx  TemplatePreview.tsx
frontend/src/components/datasource/: DataPreview.tsx  DataSourceProvider.tsx  SourceFileUpload.tsx
frontend/src/components/mapping/: MappingProvider.tsx  MappingSection.tsx
frontend/src/components/templatepreview/: TemplatePreviewGrid.tsx  TemplatePreviewInteractive.tsx  TemplatePreviewReadOnly.tsx
frontend/src/components/templatesource/: TemplateFileUpload.tsx  TemplateSourceProvider.tsx
frontend/src/services/: api.ts
src/app/core/: constants.py  processor.py  report_service.py  validator.py
src/app/infra/: config_manager.py  excel_handler.py  template_manager.py
src/app/ui/styles/: global.qss  (+2 more)
tests/: conftest.py
tests/e2e/: test_app_flow.py
tests/integration/: test_api.py  test_controllers.py  test_e2e.py  test_excel_handler.py  test_sad_paths.py
tests/unit/: test_config_manager.py  test_error_scenarios.py  test_excel_loader.py  test_preview_service.py  test_processor.py  test_report_service.py  test_template_manager.py  test_validation_worker.py  test_web_report_service.py  test_workers.py
(+18 files in other folders)
