[project]
name = "rdo-automator-backend"
version = "2.0.0"
description = "RDO Automator web API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.20",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = "test_*.py"
pythonpath = [".."]
addopts = "-v --tb=short"
